assets/styles/index.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

/** 
* Breakpoints: 
*   Mobile:   375px
*   Desktop: 1440px
*/

:root {
  --neutral: #ffffffff;
  --neutral-200: #d5d4d9ff;
  --neutral-300: #aeaeb7ff;
  --neutral-600: #3d3b5eff;
  --neutral-700: #312f4bff;
  --neutral-800: #272541ff;
  --neutral-900: #03012dff;
  
  --orange-500: #ff7c0a;

  --blue-700: #2d1c9cff;
  --blue-600: #3e52a3;
  --blue-500: #4455daff;
  
  --font-size: 18px;
  --font-bricolage: Bricolage Grotesque; /* 700 */
  --font-dmSans: DM Sans; /* 300, 500, 600, 600i, 700 */

  --rounded-1: 8px;
  --rounded-2: 12px;
  --rounded-3: 20px;
}

body {
  max-width: 100vw;
  font-size: 18px;
  font-family: var(--font-dmSans), sans-serif;
  min-height: 100vh;
  background-color: var(--neutral-900);
  color: var(--neutral);
  display: grid;
  grid-template-rows: header main footer;
}

.attribution { 
  font-size: 11px; 
  text-align: center; 
}
.attribution a { 
  color: var(--blue-600); 
}

.attribution a:hover {
  color: var(--orange-500);
}


#logo img {
  height: 2em;
  width: auto;
}

.card-today {
  height: 16em;
  background-color: var(--neutral-800);
  margin: 1.5em 0;
  align-items: center;
}

.card-today div {
  align-items: center;
}

#weather-icon-today {
  width: 6em;
  height: 6em;
}

#temperature-now {
  font-size: 4em;
}

main {
  max-width: 100vw;
}

@media(max-width: 375px) {
  main.loaded .card-today {
    background: var(--neutral-800) url("../images/bg-today-small.svg") no-repeat center;
    background-size: cover;
  }
}
@media(min-width: 376px) {
  main.loaded .card-today {
    background: var(--neutral-800) url("../images/bg-today-large.svg") no-repeat left;
    background-size: cover;
  }
}


.weather-cards-group {

  padding: 1.5em 0;

  min-height: 100px;
  gap: 24px;
}

@media(max-width: 587px) {
  .weather-cards-group {
    justify-content: center;
  }
}


.card {
  max-width: 184px;
  height: 7.5rem;
  padding: 1rem 0 .75rem 1rem;

  flex-direction: column;
  flex: 1 1 10em;

  background-color: var(--neutral-800);
  color: var(--neutral-200);

  border: 1px solid var(--neutral-700);
}

.card p {
  font-size: 24px;
  color: var(--neutral);
}

header {
  position: relative;
  vertical-align: center;
  padding: 1rem;
}

h1 {
  text-align: center;
  font-family: var(--font-bricolage);
  font-weight: 700;
}

#search {
  width: 29.2em;
  height: 3em;
  font-size: 20px;
  display: inline-block;
  border: 0;
  padding-left: 3em;
  padding-right: 1em;
  background-color: var(--neutral-800);
  color: var(--neutral);
}

#search::placeholder {
  font-size: 20px;
  color: var(--neutral-200);
}

#searcher {
  position: relative;
  justify-content: center;
  align-items: center;
  justify-self: center;
  gap: 16px;
  padding: 2em 1em;
  max-width: 655px;
}

@media(max-width: 608px) {
  #searcher {
    flex-wrap: wrap;
  }
}


#search-button {
  height: 3rem;
  flex: 1 1 6.3em;
  max-width: 29.2em;
  background-color: var(--blue-500);
  font-size: 20px;
  color: var(--neutral);
  padding: 0 15px;
  border: 0;
  font-weight: 500;
  cursor: pointer;
}

#search-button:hover   {
  background-color: var(--blue-700);
}

.left-content {
  max-width: 45em;
}


aside {
  display: inline-block;
}

footer {
  display: block;
}

#daily-cards {
  justify-content: flex-start;
  gap: 16px;
  height: fit-content;
}

.daily-card {
  width: 102px;
  height: 10em;
  border: 1px solid var(--neutral-700);
  background-color: var(--neutral-800);
}

.weather-ref {
  width: 100px;
  height: 100px;
}

/* ======================================================== */
/* |                    WEATHER ICONS                     | */
/* ======================================================== */

.overcast {
  background: url("../images/icon-overcast.webp") center no-repeat;
  background-size: contain;
}
.partly-cloudy {
  background: url("../images/icon-partly-cloudy.webp") center no-repeat;
  background-size: contain;
}
.rain {
  background: url("../images/icon-rain.webp") center no-repeat;
  background-size: contain;
}
.drizzle {
  background: url("../images/icon-drizzle.webp") center no-repeat;
  background-size: contain;
}

.snow {
  background: url("../images/icon-snow.webp") center no-repeat;
  background-size: contain;
}
.storm {
  background: url("../images/icon-storm.webp") center no-repeat;
  background-size: contain;
}
.sunny {
  background: url("../images/icon-sunny.webp") center no-repeat;
  background-size: contain;
}
.fog {
  background: url("../images/icon-fog.webp") center no-repeat;
  background-size: contain;
}

.week-day-ref, .temp-ref {
  padding: .5rem;
}

/* ======================================================== */
/* |                        UTILS                         | */
/* ======================================================== */


.flex {
  display: flex;
}

.justify-between {
  justify-content: space-between;
}

.justify-center {
  justify-content: center;
}

.align-center {
  align-items: center;
}

.flex-wrap {
  flex-wrap: wrap;
}

.w-full {
  width: 100%;
}

.rounded-1 {
  border-radius: var(--rounded-1);
}
.rounded-2 {
  border-radius: var(--rounded-2);
}
.rounded-3 {
  border-radius: var(--rounded-3);
}

/* ======================================================== */
/* |                        UNITS                         | */
/* ======================================================== */

details {
  position: relative;
  height: 100%;
  max-height: 42px;
  width: 120px;
  padding: .5rem 0;

  display: inline-block;
  z-index: 10;
  background-color: var(--neutral-800);
  cursor: pointer;
}

details[open] > summary::after {
  transform: scale(-1) translateY(50%);
}

details[open] .dropdown-card {
  position: absolute;
  top: calc(100% + .25rem); 
  left: auto;
  right: 0;
  
  background-color: var(--neutral-800);
  border-radius: 8px;
  padding: 2px 4px;
  width: 220px;
  height: fit-content;
  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
  
  z-index: 20; 
}

summary {
    position: relative; /* Opcional: Garante que o summary fique sobre o card se eles se sobrepuserem */
    list-style-type: none; /* Hides the default marker */
    font-size: 18px;
    width: 100%;
    height: 100%;
    z-index: 21;
    text-align: center;
}

summary::-webkit-details-marker { /* For WebKit browsers */
  display: none;
}

summary::before,
summary::after {
  content: "";
  display: inline-block;
  width: 20px;
  height: 20px;
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
}

summary::before {
  left: 0.75rem;
  background: url("../images/icon-units.svg") no-repeat;
  background-position: 50%;
}

summary::after {
  right: 0.75rem;
  background: url("../images/icon-dropdown.svg") no-repeat;
  background-position: 50%;
}

#toggle-system {
  border: 1px solid var(--neutral);
  width: calc(220px - 8px);
  padding: .5rem;
  display: inline-block;
}

input[type="checkbox"] {
  width: 0;
  height: 0;
  opacity: 0;
}

fieldset {
  border: 0;
  border-bottom: 1px solid var(--neutral-300);
  padding-bottom: 4px;
  flex-direction: column;
  justify-content: flex-start;
}

fieldset:last-of-type {
  border-bottom: 0;
  padding-bottom: 0;
}

input[type="radio"] {
  appearance: none;
}

input[type="radio"]:checked::after {
  content: "";
  width: 16px;
  height: 16px;
  position: absolute;
  top: 0;
  transform: translateY(50%);
  right: 4px;
  display: block;
  background: transparent url("../images/icon-checkmark.svg") no-repeat center;
}

label:has(input[type="radio"]:checked) {
  background-color: var(--neutral-600);
}

details label {
  position: relative;
  cursor: pointer;
}

details legend {
  font-size: 12px;
  color: var(--neutral-300);
  cursor: default;
}

label, legend {
  padding: .5rem;
}

